2010-05-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/open_eth.c: 
	Misc. changes to make code 16bit-target compliant.

2010-05-18	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: PR
	1448/filesystem.

2010-05-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-alias.m4: Change quoting to work-round
	http://www.freebsd.org/cgi/query-pr.cgi?pr=146378.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libchip/network/if_dc.c: Remove warnings.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libchip/serial/mc68681.c, libchip/serial/mc68681_reg.c,
	libchip/serial/ns16550.c, libchip/serial/serial.h,
	libchip/serial/z85c30.c, libchip/serial/z85c30_reg.c: Use uintptr_t
	or intptr_t instead of uint32_t or int32_t.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libchip/rtc/ds1375-rtc.h, libchip/rtc/ds1375.c,
	libchip/rtc/icm7170.c, libchip/rtc/icm7170_reg.c,
	libchip/rtc/m48t08_reg.c, libchip/rtc/rtc.h: Use uintptr_t instead of
	uint32_t.

2010-04-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/serial.h: Add extern "C".

2010-04-10	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/serial/serial.h, serial/mc68681.c, serial/mc68681_p.h,
	serial/ns16550.c, serial/ns16550_p.h, serial/serial.h,
	serial/z85c30.c, serial/z85c30_p.h: adapt _write_ functions to new
	prototype

2010-04-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libchip/ide/ata.c: Change missed use of ATA_USE_OLD_EXCEPTIONS to
	CPU_SIMPLE_VECTORED_INTERRUPTS.

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ata.c: Use correct macro from RTEMS to determine whether
	simple or PIC interrupt model.

2010-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/rtc/ds1375.c: #include <unistd.h>.

2010-03-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/i82586.c: Readdress use of ctype methods per
	recommendation from D.J. Delorie on the newlib mailing list. We